--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+html{ 
+    box-sizing: border-box;
+} 
+
+*
+*::before, 
+*::after{ 
+    box-sizing: border-box;
+} 
+
+
+
 body { 
 background-color:#ff9100;
 } 
